# authenticated_todo

./: .gitignore  Authenticated Todo.http  Authenticated Todo.postman_collection.json  Cargo.toml  README.md  build.rs
migration/src/: lib.rs
src/: error.rs  main.rs  module.rs  response.rs
src/auth/: auth_controller.rs  auth_service.rs  dto.rs  guard.rs  mod.rs
src/config/: mod.rs
src/todo/: dto.rs  mod.rs  todo_controller.rs  todo_service.rs
src/todo/entity/: mod.rs  prelude.rs  todos.rs
src/user/: dto.rs  mod.rs  user_controller.rs  user_service.rs
src/user/entity/: users.rs
